--- a/sub_5.html
+++ b/sub_5.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1450px">
-    <title>고객센터</title>
+    <title>브랜드소개</title>
+
+    <!-- 파피콘 -->
     <link rel="shortcut icon" href="./images/title_icon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="./css/sub_4.css">
+    <link rel="stylesheet" href="./css/sub_5.css">
+
+    <!-- aos css -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 
 <body>
-       <!-- header -->
-       <header>
+      <!-- header -->
+      <header>
         <a href="./index.html">
             <img src="./images/logo_b.png" alt="피아노와 로고" class="logo_b">
             <img src="./images/logo_w.png" alt="피아노와 로고" class="logo_w">
@@ -158,161 +163,196 @@
         </div>
     </header>
     <!--해더 -->
-    <!-- 배너 -->
-    <section id="banner">
-        <div class="b_inner">
-            <div class="inquiry">
-                <p><a href="#">내 문의내역 ></a></p>
-            </div>
-            <h1><img src="./images/sub_4/icon3.png" alt="피아노 아이콘"> 피아노와 고객센터</h1>
-            <form action="#">
-                <span><img src="./images/sub_4/icon1.png" alt=""> 도움말 검색</span>
-                <input type="text" placeholder="검색어를 입력하세요">
 
-            </form>
+    <section id="banner">
+        <div class="text">
+            <h2>ABOUT</h2>
+            <h1>DISCOVER PIANO VALUE</h1>
+            <p>피아노와는 피아노만의 가치를 찾아 소통합니다.</p>
+            <span class="line"></span>
+        </div>
+    </section>
+
+    <section class="content1" id="content1">
+        <div class="text">
+            <h2>OUR VISION</h2>
+            <h1>PIANO VALUE INNOVATOR <br>
+                IN EVERYDAY LIFE
+            </h1>
+            <p>우리는 피아노만의 가치를 찾고 즐거운 문화를 조성합니다. <br>
+                다양한 엔터테인먼트 콘텐츠, 유저 친화적 서비스로 <br>
+                모두가 피아노와 친해질 수 있도록 성장해 나가겠습니다.</p>
 
         </div>
-    </section >
-    <!-- 배너 -->
-    <section class="help" id="help">
-    <h1>자주 찾는 도움말</h1>
-<div class="help_content">
-    <ul class="
-    help_ul_1">
-        <li><a href="#">
-        <div>
-        <h2>01</h2>    
-        <p>방화벽 오류 메시지가 <br> 떠요</p>
-        </div></a>
-    </li>
-  
-    </li>
-        <li> <a href="#">
-        <div>
-        <h2>02</h2>    
-        <p>로그인 비밀번호를 <br> 잊어버렸어요</p>
-        </div></a>
-    </li>
-        <li><a href="#">
-        <div>
-        <h2>03</h2>    
-        <p>계정 도용(해킹)을 <br> 당했어요</p>
-        </div></a>
-    </li>
-        <li><a href="#">
-        <div>
-        <h2>04</h2>    
-        <p>아이디와 비밀번호를 <br> 변경하고 싶어요</p>
-        </div></a>
-    </li>
-        <li><a href="#">
-        <div>
-        <h2>05</h2>    
-        <p>회원가입, 정보수정, <br> 회원탈퇴는 어떻게 <br> 하나요?</p>
-        </div></a>
-    </li>
-</ul>
-    <ul class="help_ul_2">
-        <li><a href="#">
-        <div>
-        <h2>06</h2>    
-        <p>배송 조회를 했는데, <br>
-            배송 추적이 안돼요.</p>
-        </div></a>
-    </li>
-  
-    </li>
-        <li><a href="#">
-        <div>
-        <h2>07</h2>    
-        <p>고객상담 업무시간이 <br>
-            어떻게 되나요?</p>
-        </div></a>
-    </li>
-        <li><a href="#">
-        <div>
-        <h2>08</h2>    
-        <p>해외에서 결제는 <br>
-            어떻게 하나요?</p>
-        </div></a>
-    </li>
-        <li>
-        <div> <a href="#">
-        <h2>09</h2>    
-        <p>반품/교환 접수는  <br>
-            어떻게 하나요?</p>
-        </div> </a>
-    </li>
-        <li> <a href="#">
-        <div>
-        <h2>10</h2>    
-        <p>임금을 했는데 확인이 <br>
-            되지 않습니다.</p>
-        </div></a>
-    </li>
-</ul>
-</div>
-</section>
-<!-- 문의유형별 도움말 보기 -->
-<section class="Inquiry_Type">
-    <h1>문의유형별 도움말 보기</h1>
-<div class="Inquiry_Type_box">
-    <a href="#"><img src="./images/sub_4/Inquiry_Type_icon1.png" alt=""><span>결제/환불</span></a>
-    <a href="#"><img src="./images/sub_4/Inquiry_Type_icon2.png" alt=""><span>버그 제보</span></a>
-    <a href="#"><img src="./images/sub_4/Inquiry_Type_icon3.png" alt=""><span>건의 제안</span></a>
-    <a href="#"><img src="./images/sub_4/Inquiry_Type_icon4.png" alt=""><span>계정 문의</span></a>
-    <a href="#"><img src="./images/sub_4/Inquiry_Type_icon5.png" alt=""><span>주문/ 배송</span></a>
-    <a href="#"><img src="./images/sub_4/Inquiry_Type_icon6.png" alt=""><span>신고 문의</span></a>
-</div>
-</section>
+        <div class="img">
+            <img src="./images/sub_5/img1main.png" alt="피아노치는사람">
+            <img src="./images/sub_5/img2center.png" alt="사람" data-aos="zoom-in-down" data-aos-offset="500">
+            <img src="./images/sub_5/img3left.png" alt="사람" data-aos="zoom-in-left" data-aos-offset="500">
+            <img src="./images/sub_5/img4left.png" alt="사람" data-aos="zoom-in-left">
+            <img src="./images/sub_5/img5left.png" alt="사람" data-aos="zoom-in-left" data-aos-offset="500">
+            <img src="./images/sub_5/img6right.png" alt="사람" data-aos="zoom-in-right" data-aos-offset="100">
+            <img src="./images/sub_5/img7right.png" alt="사람" data-aos="zoom-in-right">
+            <img src="./images/sub_5/img8note.png" alt="음표1" data-aos="zoom-in-left" data-aos-offset="300"
+                data-aos-duration="3000">
+            <img src="./images/sub_5/img9note.png" alt="음표2" data-aos="zoom-in-right" data-aos-offset="200"
+                data-aos-duration="3000">
+            <img src="./images/sub_5/img10shadow.png" alt="그림자">
+        </div>
 
-<section id="security">
-<h1>보안 현황</h1>
-<div class="security_box">
-        <div class="box1">
-        <img src="./images/sub_4/security.png" alt="">
-        <h2><span>?</span>등급</h2>
-        <p><span>로그인</span>하고 보안등급 확인하세요.</p>
-    </div>
-    <div class="box2">
-        <h2> 나에게 필요한 보안 서비스는?</h2>
-        <p>지금 <span>로그인</span>하면 나에게 필요한 보안서비스를 <br>
-        추천해드려요.  <br>
-    권장 보안 서비스를 설정하고 계정 보호를 강화하세요!</p>
-        <button>로그인</button>
-    </div>
-</div>
-</section>
+    </section>
 
-<section class="banner">
-    
-    <div class="Shortcut">
-        <h1>바로가기</h1>
-        <ul>
-            <li><a href="#">회원가입 ></a></li>
-            <li><a href="#">로그인 ></a></li>
-        </ul>
-        <img src="./images/sub_4/banner_icon1.png" alt="아이콘">
-    </div>
-    <div class="consulting">
-        <h1>1:1상담</h1>
-        <ul>
-            <li>평일: 다음날 답변 완료 </li>
-            <li>토,일, 공휴일: 휴일 이후 답변완료</li>
-        </ul>
-        <img src="./images/sub_4/banner_icon2.png" alt="아이콘">
-    </div>
-    <div class="telephone">
-        <h1>전화 1234-5679</h1>
-        <ul>
-            <li>평일: 오전 9시~ 오후 6시</li>
-            <li>토,일, 공휴일: 휴무</li>
-        </ul>
-        <img src="./images/sub_4/banner_icon3.png" alt="아이콘">
-    </div>
+    <section class="content2" id="content2">
+        <div class="text">
+            <h2>OUR MISSON</h2>
+            <h1>OUR GOOD DAYS BECOME A BETTER TOMORROW
+            </h1>
+            <p>함께하는 즐거운 추억들이 모여 더 나은 내일을 만듭니다.</p>
+            <p> 함께하는 즐거운은 오랫동안 기억될 행복한 추억으로 남습니다. <br>
+                사람들이 함께 만들어갈 더 나은 내일을 위해 <br> 우리는 사람들의 하루하루를 즐거움으로 채워갑니다.
+            </p>
+        </div>
 
-</section>
+        <div class="icon">
+            <div class="icon1">
 
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 85.2 80.4"
+                    style="enable-background:new 0 0 85.2 80.4;" xml:space="preserve">
+                    <style type="text/css">
+                        .st0 {
+                            fill: none;
+                            stroke: #010101;
+                            stroke-width: 2;
+                            stroke-miterlimit: 10;
+                        }
+                    </style>
+                    <g>
+                        <path class="st0" d="M83.6,39c0-7.9-6.4-14.3-14.3-14.3C61.4,24.7,55,31.1,55,39c0,4.6,2.2,8.7,5.6,11.4c1.6-3.3,4.9-5.5,8.7-5.5
+		c-3.8,0-6.8-3.1-6.8-6.8s3.1-6.8,6.8-6.8c3.8,0,6.8,3.1,6.8,6.8s-3.1,6.8-6.8,6.8c3.8,0,7.2,2.3,8.7,5.5
+		C81.4,47.8,83.6,43.7,83.6,39z" />
+                        <path class="st0"
+                            d="M69.3,44.9c-3.8,0-7.2,2.3-8.7,5.5c2.4,1.9,5.4,3,8.7,3c3.3,0,6.3-1.1,8.7-3C76.5,47.1,73.2,44.9,69.3,44.9z" />
+                    </g>
+                    <g>
+                        <path class="st0" d="M49.6,64.7c0-7.9-6.4-14.3-14.3-14.3c-7.9,0-14.3,6.4-14.3,14.3c0,4.6,2.2,8.7,5.6,11.4
+		c1.6-3.3,4.9-5.5,8.7-5.5c-3.8,0-6.8-3.1-6.8-6.8s3.1-6.8,6.8-6.8c3.8,0,6.8,3.1,6.8,6.8s-3.1,6.8-6.8,6.8c3.8,0,7.2,2.3,8.7,5.5
+		C47.4,73.4,49.6,69.3,49.6,64.7z" />
+                        <path class="st0"
+                            d="M35.3,70.5c-3.8,0-7.2,2.3-8.7,5.5c2.4,1.9,5.4,3,8.7,3c3.3,0,6.3-1.1,8.7-3C42.4,72.8,39.1,70.5,35.3,70.5z" />
+                    </g>
+                    <g>
+                        <path class="st0" d="M35.3,15.5c0-7.9-6.4-14.3-14.3-14.3C13,1.2,6.6,7.6,6.6,15.5c0,4.6,2.2,8.7,5.6,11.4c1.6-3.3,4.9-5.5,8.7-5.5
+		c-3.8,0-6.8-3.1-6.8-6.8s3.1-6.8,6.8-6.8c3.8,0,6.8,3.1,6.8,6.8s-3.1,6.8-6.8,6.8c3.8,0,7.2,2.3,8.7,5.5
+		C33.1,24.2,35.3,20.1,35.3,15.5z" />
+                        <path class="st0"
+                            d="M20.9,21.3c-3.8,0-7.2,2.3-8.7,5.5c2.4,1.9,5.4,3,8.7,3c3.3,0,6.3-1.1,8.7-3C28.1,23.6,24.8,21.3,20.9,21.3z" />
+                    </g>
+                    <circle class="st0" cx="71.3" cy="8.5" r="4.3" />
+                    <circle class="st0" cx="49.6" cy="9.7" r="4.3" />
+                    <circle class="st0" cx="67" cy="63.2" r="4.3" />
+                    <circle class="st0" cx="7.9" cy="40.6" r="4.3" />
+                    <circle class="st0" cx="6.6" cy="68.6" r="4.3" />
+                    <line class="st0" x1="26.6" y1="28.7" x2="32.7" y2="50.6" />
+                    <line class="st0" x1="62.7" y1="26.3" x2="35.2" y2="17" />
+                    <line class="st0" x1="34.7" y1="11.5" x2="45.3" y2="9.7" />
+                    <line class="st0" x1="71.3" y1="24.8" x2="71.3" y2="12.9" />
+                    <line class="st0" x1="57.8" y1="47.6" x2="47.8" y2="57.7" />
+                    <line class="st0" x1="7.9" y1="36.3" x2="12.2" y2="26.9" />
+                    <line class="st0" x1="10.9" y1="68.6" x2="20.9" y2="65.8" />
+                    <line class="st0" x1="73.7" y1="52.7" x2="70.3" y2="60.5" />
+                </svg>
+
+                <p>
+                    우리는 함께 소통하며 세계로 동행합니다.
+                </p>
+            </div>
+            <div class="icon2">
+
+                <img src="./images/sub_5/icon2.svg" alt="아이콘2">
+                <p>우리는 음악적 가치를 지속적으로 키워 나갑니다. </p>
+            </div>
+            <div class="icon2">
+                <img src="./images/sub_5/icon3.svg" alt="아이콘3">
+                <p>우리는 끊임없이 새로운 도전을 추구합니다.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="content3" id="content3">
+        <div class="text">
+            <h2>BRAND IDENTITY</h2>
+            <h1>피아노와 BI            </h1>
+        </div>
+        <div class="logo">
+            <div class="logo_img">
+                <img src="./images/sub_5/logo_b.svg" alt="로고">
+            </div>
+            <div class="logo_txt">
+                <p><span>
+                        피아노와의 Brand Identity</span>는
+                    <br>
+                    <span>함께한다</span>는 가치를 형상화한 발자국과, <br>
+                    건반과 음표를 활용하여 떠오르는 후광의 이미지와 함께, <br>
+                    <span>즐거운 소리</span>와 <span>자유로운 발걸음</span>을 형상화 하였습니다. <br>
+                    <span>피아노를 즐기는 사람과 즐거운 동행</span>의 의미를 주었습니다.
+                </p>
+            </div>
+        </div>
+        <p>* 피아노와 로고 사용시 제공 파일을 그대로 사용하여야 하며 임의로 변형하여 사용하는 것을 금합니다.</p>
+        <button>DOWNLOAD</button>
+    </section>
+    <section class="content4" id="content4">
+        <div class="text">
+            <h2>BRAND COLOR</h2>
+            <h1>피아노와 색상
+            </h1>
+        </div>
+        <div class="color">
+            <div class="color_info">
+                <div>
+                    <h1>
+                        #5B54A4
+                    </h1>
+                    <p>
+                        RGB: 91, 84, 164 <br>
+                        C : 75% M : 77% <BR>
+                        Y : 0% K : 0%
+                    </p>
+                </div>
+                <div>
+                    <h1>
+                        #F1F5F7
+                    </h1>
+                    <p>
+                        RGB: 241, 245, 247 <br>
+                        C : 4% M : 4% <BR>
+                        Y : 1% K : 1%
+                    </p>
+                </div>
+                <div>
+                    <h1>
+                        #020721
+                    </h1>
+                    <p>
+                        RGB: 02, 07, 33 <br>
+                        C : 86% M : 78% <BR>
+                        Y : 56% K : 75%
+                    </p>
+                </div>
+            </div>
+            <div class="color_txt">
+<p>
+    피아노를 직관적으로 보여줄 수 있는 <br>
+    흰색과 검은 색에서 푸른 빛을 가미하여 <br>
+    피아노의 <span> 무게감과 맑은 느낌</span>을 자아내고 <br>
+    보라색을 활용해 신비로움을 추가하였습니다. <br>
+<span>신뢰감이 있으면서도 새롭고 청량한 기분</span>을 선사합니다.
+
+</p>
+            </div>
+        </div>
+    </section>
     <!-- 푸터 -->
     <footer>
         <div class="footer_inner">
@@ -395,7 +435,11 @@
     <!-- 제이커리 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="./script/sub_4.js"></script>
+    <script src="./script/sub_5.js"></script>
+    <!-- aos 소스 -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script><!-- aos 라이브러리 -->
+    <script src="script/aos.js"></script>
+
 </body>
 
 </html>
