--- a/sub_5.html
+++ b/sub_5.html
@@ -263,17 +263,17 @@
                 </svg>
 
                 <p>
-                    우리는 함께 소통하며 세계로 동행합니다.
+                    우리는 함께 소통하며 세계로 <span>동행</span>합니다.
                 </p>
             </div>
             <div class="icon2">
 
                 <img src="./images/sub_5/icon2.svg" alt="아이콘2">
-                <p>우리는 음악적 가치를 지속적으로 키워 나갑니다. </p>
+                <p>우리는 <span>음악적 가치</span>를 지속적으로 키워 나갑니다. </p>
             </div>
-            <div class="icon2">
+            <div class="icon3">
                 <img src="./images/sub_5/icon3.svg" alt="아이콘3">
-                <p>우리는 끊임없이 새로운 도전을 추구합니다.</p>
+                <p>우리는 끊임없이 <span>새로운 도전</span>을 추구합니다.</p>
             </div>
 
         </div>
