--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
             <a href="#">
                 <h3>여름 쿠폰 행사 바로가기 <span>></span></h3>
             </a>
+            <img src="./images/banner1.png" alt="배너1">
         </div>
         <div class="b2">
             <h2>자유롭고 다채로운 리듬감 <br>재즈피아노를 만나다
@@ -357,17 +358,16 @@
             <a href="#">
                 <h3>재즈 피아노 악보 바로가기 <span>></span> </h3>
             </a>
+            <img src="./images/banner2.png" alt="배너2">
         </div>
         <div class="b3">
             <h2>신비로움과 편안함 <br>
                 피아노 뉴에이지 TOP 10곡</h2>
             <a href="#">
-                <h3>뉴에이지 곡 듣기 바로가기
-
-                    <span>></span>
-
+                <h3>뉴에이지 곡 듣기 바로가기<span>></span>
                 </h3>
             </a>
+            <img src="./images/banner3.png" alt="배너3">
         </div>
     </section>
     <!-- 섹션 -->
